# taubase

./: LICENSE  README.md  README.rst  setup.cfg  tox.ini
data/: taubase.bel.gmt  taubase.bel.sif
src/taubase/: __init__.py  __main__.py  cli.py  drepo.py  repository.py  version.py  wsgi.py
src/taubase/templates/: edges.html  fragments.html  index.html  references.html  variants.html
taubase/: __init__.py  __main__.py  cli.py  getters.py  wsgi.py
taubase/templates/: modifiers.html  tau_aggregation_inhibitors.html
