##########################
# Setup.py Configuration #
##########################
[metadata]
name = taubase
version = 0.0.1-dev
description = A knowledge graph and web app for the Tau protein
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/pharmacome/taubase

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems Biology
    Networks Biology

[options]
install_requires =
    click
    # Web
    flask
    flask_bootstrap
    # Scientific
    pandas
    # BEL
    pybel
    bel-repository
    bel-enrichment
    # HBP content
    hbp-knowledge @ git+https://www.github.com/pharmacome/knowledge.git
    hbp-enrichment @ git+https://www.github.com/bel-enrichment/results.git
    hbp-semi-automated-curation @ git+https://www.github.com/pharmacome/semi-automated-curation.git
    # NeuroMMSig Content
    # neurommsig-alzheimers-knowledge @ git+https://gitlab.scai.fraunhofer.de/charles.hoyt/neurommsig-alzheimers.git
    # neurommsig-parkinsons-knowledge @ git+https://gitlab.scai.fraunhofer.de/charles.hoyt/neurommsig-parkinsons.git
    epilepsy-knowledge @ git+https://github.com/neurommsig-epilepsy/knowledge.git

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
html =
    pybel-tools
cx =
    pybel_cx
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints


[options.entry_points]
console_scripts =
    taubase = taubase.cli:main
